--- a/src/Pages/SignUp/Components/Name/styles.module.scss
+++ b/src/Pages/SignUp/Components/Name/styles.module.scss
@@ -1,45 +1,7 @@
-.container {
-  height: 100%;
-  margin: 1rem 0;
+@import url("../styles.module.scss");
+
+.inputs {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
-
-  .titleBar {
-    .title {
-      font-size: 1.5rem;
-    }
-
-    .subTitle {
-      font-size: 1rem;
-      opacity: 0.5;
-    }
-  }
-
-  .inputs {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-
-    .InputBar {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-
-      .name {
-        font-size: 1rem;
-        color: #4e41ff;
-        font-weight: bold;
-        opacity: 0.5;
-        margin-inline-start: 1rem;
-      }
-
-      .input {
-        &.incorrect {
-          border-color: transparent;
-          background: #ff414122;
-        }
-      }
-    }
-  }
+  gap: 1rem;
 }
