Making email step for sign up

--- a/src/Pages/SignUp/Components/styles.module.scss
+++ b/src/Pages/SignUp/Components/styles.module.scss
@@ -30,6 +30,7 @@
     }
 
     .input {
+      min-width: 20rem;
       &.incorrect {
         border-color: transparent;
         background: #ff414122;
