--- a/src/Components/Banner/styles.module.scss
+++ b/src/Components/Banner/styles.module.scss
@@ -50,11 +50,14 @@
   }
 
   .change {
-    // visibility: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+
+    &.hide {
+      display: none;
+    }
 
     .title {
       font-size: 0.75rem;
@@ -64,5 +67,11 @@
     .link {
       font-size: 1.25rem;
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .banner {
+    display: none !important;
   }
 }
