--- a/src/Pages/styles.module.scss
+++ b/src/Pages/styles.module.scss
@@ -96,6 +96,16 @@
           font-weight: 700;
           font-size: 1rem;
         }
+
+        .buttonBar {
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+
+          .logout {
+            display: none;
+          }
+        }
       }
     }
 
@@ -133,7 +143,6 @@
     align-items: center;
     justify-content: center;
     padding: unset;
-    background: unset;
 
     .container {
       width: 100%;
@@ -142,10 +151,11 @@
         width: 75%;
 
         .detail {
-          background: #fff;
-          padding: 1rem 2rem;
-          border-radius: 1rem;
-          box-shadow: 0 0 1rem #00000022;
+          .buttonBar {
+            .logout {
+              display: unset;
+            }
+          }
         }
       }
 
